# AndroidCheatsBaseByKio

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Substrate/: SubstrateHook.h
app/src/main/java/it/kiocode/il2cppandroidcheats/: Main.java  MainActivity.java  Utils.java
app/src/main/java/it/kiocode/il2cppandroidcheats/components/: Block.java  Checkbox.java  Menu.java  PageButton.java  Slider.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
